--- a/layouts/index.html
+++ b/layouts/index.html
@@ -23,8 +23,8 @@
       {{ range .Pages }}
       <li class="my-1">
         <a class="text-lg flex flex-row py-1" href="{{ .Permalink }}">
-          <time class="block w-24 flex-none" datetime="{{ .PublishDate }}"
-            >{{ .PublishDate.Format "Jan 2"}}
+          <time class="block w-24 flex-none" datetime="{{ .PublishDate }}">
+            {{ dateFormat "Jan 2" .PublishDate }}
           </time>
           <div>{{ .Title }}</div>
         </a>
