--- a/layouts/partials/entry.html
+++ b/layouts/partials/entry.html
@@ -1,30 +1,33 @@
-<article class="h-entry">
-  {{ if .Title }}
-    <h1>
-      <a class="u-url" href="{{ .RelPermalink }}">{{ .Title }}</a>
-    </h1>
-    {{ if .Summary }}
-      <div class="p-summary">
-        <section>
-          <p>{{ .Summary }}</p>
-          <p><a href="{{ .Permalink }}">Continue reading →</a></p>
-        </section>
-      </div>
-    {{ else if .Truncated }}
-      {{ .Content | truncate 200 }}
-      <p><a href="{{ .Permalink }}">Continue reading →</a></p>
+<li>
+  <article class="h-entry entry">
+    {{ if .Title }}
+      <h2 class="text-xl font-bold p-name">
+        <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+      </h2>
+
+      <a href="{{ .Permalink }}" class="u-url">
+        <time
+          class="dt-published"
+          datetime="{{ .Date.Format "2006-01-02T15:04:05.000-07:00" }}"
+          itemprop="datePublished"
+        >
+          {{ .Date.Format "Jan 2, 2006" }}
+        </time>
+      </a>
+
+      <section class="e-content">{{ .Content }}</section>
+    {{ else }}
+      <a href="{{ .Permalink }}" class="u-url">
+        <time
+          class="dt-published"
+          datetime="{{ .Date.Format "2006-01-02T15:04:05.000-07:00" }}"
+          itemprop="datePublished"
+        >
+          {{ .Date.Format "Jan 2, 2006" }}
+        </time>
+      </a>
+
+      <section class="e-content">{{ .Content }}</section>
     {{ end }}
-  {{ else }}
-    <section class="e-content">{{ .Content }}</section>
-  {{ end }}
-  <a href="{{ .RelPermalink }}" class="archive-article-date u-url">
-    <time
-      class="dt-published"
-      datetime="{{ .Date.Format "2006-01-02T15:04:05.000-07:00" }}"
-      itemprop="datePublished"
-    >
-      {{ .Date.Format "Jan 2, 2006" }}
-    </time>
-  </a>
-</article>
-<hr />
+  </article>
+</li>
