--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,16 +1,18 @@
 <header class="w-full p-6 md:px-24">
-  <nav class="flex justify-between gap-x-4">
-    <a href="{{ .Site.Home.Permalink }}">{{ .Site.Title }}</a>
+  <nav class="flex justify-between gap-x-4 flex-wrap">
+    <a class="block" href="{{ .Site.Home.Permalink }}">{{ .Site.Title }}</a>
 
-    <ul id="nav-menu" class="m-0 p-0 list-none">
-      {{ with .Site.GetPage "/about" }}
-      <li class="my-0 mb-2">
-        <a href="{{ .Permalink }}" class="">{{ .Title }}</a>
-      </li>
-      {{ end }} {{ range .Site.Sections }}
-      <li class="my-0 mb-2">
-        <a href="{{ .Permalink }}" class="">{{ .Title }}</a>
-      </li>
+    <ul id="nav-menu" class="m-0 p-0 list-none flex grow justify-end">
+      {{ range .Site.Menus.main }}
+        <li class="font-bold">
+          {{ if .Page.Params.redirect }}
+            <a class="px-2" href="{{ .Page.Params.redirect }}">{{ .Name }}</a>
+          {{ else }}
+            <a class="px-2" href="{{ .URL | relLangURL | safeURL }}"
+              >{{ .Name }}</a
+            >
+          {{ end }}
+        </li>
       {{ end }}
     </ul>
   </nav>
