Add entry-body class to list entry

--- a/layouts/partials/entry.html
+++ b/layouts/partials/entry.html
@@ -15,7 +15,7 @@
         </time>
       </a>
 
-      <section class="e-content">{{ .Content }}</section>
+      <section class="e-content entry-body">{{ .Content }}</section>
     {{ else }}
       <a href="{{ .Permalink }}" class="u-url">
         <time
@@ -27,7 +27,7 @@
         </time>
       </a>
 
-      <section class="e-content">{{ .Content }}</section>
+      <section class="e-content entry-body">{{ .Content }}</section>
     {{ end }}
   </article>
 </li>
