--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,7 +4,7 @@
 
     <ul id="nav-menu" class="m-0 p-0 list-none flex grow justify-end">
       {{ range .Site.Menus.main }}
-        <li class="font-bold">
+        <li class="font-bold -mr-2">
           {{ if .Page.Params.redirect }}
             <a class="px-2" href="{{ .Page.Params.redirect }}">{{ .Name }}</a>
           {{ else }}
