--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -15,16 +15,20 @@
 
             I couldn't get it to work wiht just linking to the author at the homepage. A lot of services didn't manage to follow the link and get the author from the homepage instead of on this post page.
         -->
-        
-        <!-- H-card that is used for IndieWeb -->
-        <p style="display: none" class="u-author h-card" rel="me">
-          <a class="u-url" href="/about/">
-            <img class="u-photo" src="{{ .Site.Author.avatar }}" width="96" height="96" />
-          </a>
-          <h1 class="p-name" rel="me">{{ .Site.Author.name }}</h1>
-          <h4 class="p-role">{{ .Site.Params.description | safeHTML }}</h4>
-        </p> 
-    
+
+      <p style="display: none" class="u-author h-card" rel="me">
+        <a class="u-url" href="/about/">
+          <img
+            class="u-photo"
+            src="{{ .Site.Author.avatar }}"
+            width="96"
+            height="96"
+          />
+        </a>
+
+        <span class="p-name" rel="me">{{ .Site.Author.name }}</span>
+        <span class="p-role">{{ .Site.Params.description | safeHTML }}</span>
+      </p>
     </header>
 
     <div class="e-content">{{ .Content }}</div>
