Add hardcoded description

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,11 +1,16 @@
 {{ define "main" }}
   <header>
     <div class="my-4 text-4xl">👋</div>
-
+    
     <div>
-      <h1 class="text-xl font-bold">{{ .Title }}</h1>
-      <p class="my-4">{{ .Content }}</p>
+      <h1 class="text-xl font-bold">Hej, jag heter Johan.</h1>
+      <p class="my-4">
+        Jag bygger webbsidor, appar och allsköns digitala ting.
+        <br class="hidden md:block" />Just nu gör jag det hos
+        <a href="https://funkismultimedia.se">Funkis Multimedia</a>.
+      </p>
     </div>
+
   </header>
 
   <ul class="h-feed space-y-32 mt-16">
