--- a/layouts/_default/list.photoshtml.html
+++ b/layouts/_default/list.photoshtml.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode }}">
   {{ partial "head.html" . }}
-  <body class="font-serif leading-snug">
+  <body>
     {{- partial "dev-size-indicator.html" . -}}
     {{- partial "header.html" . -}}
     <main class="w-full p-6 md:px-24 flex flex-wrap gap-4 md:gap-2 lg:gap-4">
