--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -31,6 +31,6 @@
       </p>
     </header>
 
-    <div class="e-content">{{ .Content }}</div>
+    <div class="e-content entry-body">{{ .Content }}</div>
   </article>
 {{ end }}
