--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode }}">
   {{ partial "head.html" . }}
-  <body class="font-serif leading-snug">
-    {{- partial "dev-size-indicator.html" . -}} {{- partial "header.html" . -}}
+  <body>
+    {{- partial "dev-size-indicator.html" . -}}
+    {{- partial "header.html" . -}}
     <main class="w-full max-w-xl p-6 md:px-24 md:box-content">
       {{- block "main" . }}{{- end }}
     </main>
-    {{- partial "dev-parameters.html" . -}} {{- partial "footer.html" . -}}
+    {{- partial "dev-parameters.html" . -}}
+    {{- partial "footer.html" . -}}
   </body>
 </html>
