--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,15 +2,13 @@
   <nav class="flex justify-between gap-x-4 flex-wrap">
     <a class="block" href="{{ .Site.Home.Permalink }}">{{ .Site.Title }}</a>
 
-    <ul id="nav-menu" class="m-0 p-0 list-none flex grow justify-end">
+    <ul id="nav-menu" class="m-0 p-0 list-none flex grow justify-end gap-4">
       {{ range .Site.Menus.main }}
-        <li class="font-bold -mr-2">
+        <li class="font-bold">
           {{ if .Page.Params.redirect }}
-            <a class="px-2" href="{{ .Page.Params.redirect }}">{{ .Name }}</a>
+            <a href="{{ .Page.Params.redirect }}">{{ .Name }}</a>
           {{ else }}
-            <a class="px-2" href="{{ .URL | relLangURL | safeURL }}"
-              >{{ .Name }}</a
-            >
+            <a href="{{ .URL | relLangURL | safeURL }}">{{ .Name }}</a>
           {{ end }}
         </li>
       {{ end }}
