Add comments to blog

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -32,5 +32,9 @@
     </header>
 
     <div class="e-content entry-body">{{ .Content }}</div>
+
+    {{ if .Site.Params.include_conversation }}
+      <script type="text/javascript" src="https://micro.blog/conversation.js?url={{ .Permalink }}"></script>
+    {{ end }}
   </article>
 {{ end }}
