--- a/assets/css/dist.css
+++ b/assets/css/dist.css
@@ -665,10 +665,6 @@ h2 {
   margin-right: 2rem;
 }
 
-.-mr-2 {
-  margin-right: -0.5rem;
-}
-
 .block {
   display: block;
 }
@@ -802,11 +798,6 @@ h2 {
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -849,11 +840,6 @@ h2 {
   padding-right: 1rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
 .pb-2 {
   padding-bottom: 0.5rem;
 }
@@ -868,10 +854,6 @@ h2 {
 
 .text-right {
   text-align: right;
-}
-
-.font-serif {
-  font-family: Charter, ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 }
 
 .text-4xl {
@@ -910,30 +892,9 @@ h2 {
   font-style: italic;
 }
 
-.leading-snug {
-  line-height: 1.375;
-}
-
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
-@media (prefers-color-scheme: dark) {
-  .dark\:bg-slate-900 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(15 23 42 / var(--tw-bg-opacity));
-  }
-
-  .dark\:text-white {
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
-  }
 }
 
 @media (min-width: 640px) {
@@ -1038,6 +999,28 @@ h2 {
     --tw-bg-opacity: 1;
     background-color: rgb(251 207 232 / var(--tw-bg-opacity));
   }
+}
+
+.microblog_conversation {
+  margin-top: 6rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 3rem;
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.microblog_conversation .microblog_user {
+  display: flex;
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+
+.microblog_conversation .microblog_user microblog_fullname {
+  display: block;
+}
+
+.microblog_conversation .microblog_user microblog_fullname::after {
+  content: ":";
 }
 
 @font-face {
