--- a/assets/css/dist.css
+++ b/assets/css/dist.css
@@ -1007,12 +1007,14 @@ h2 {
   flex-direction: column;
   row-gap: 3rem;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .microblog_conversation .microblog_user {
   display: flex;
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
 }
 
 .microblog_conversation .microblog_user microblog_fullname {
