--- a/assets/css/dist.css
+++ b/assets/css/dist.css
@@ -518,6 +518,16 @@ article.entry .entry-body a::after {
   display: inline;
   --tw-text-opacity: 1;
   color: rgb(153 27 27 / var(--tw-text-opacity));
+}
+
+@media (prefers-color-scheme: dark) {
+  article.entry .entry-body a::after {
+    --tw-text-opacity: 1;
+    color: rgb(239 68 68 / var(--tw-text-opacity));
+  }
+}
+
+article.entry .entry-body a::after {
   top: -2px;
   margin-left: 1.5px;
 }
