--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,9 @@
 <header class="w-full p-6 md:px-24">
   <nav class="flex justify-between gap-x-4 flex-wrap">
-    <a class="block" href="{{ .Site.Home.Permalink }}">{{ .Site.Title }}</a>
+    {{ if not .IsHome }}
+      <a class="block" href="{{ .Site.Home.Permalink }}">{{ .Site.Title }}</a>
+    {{ end }}
+
 
     <ul id="nav-menu" class="m-0 p-0 list-none flex grow justify-end gap-4">
       {{ range .Site.Menus.main }}
