--- a/layouts/partials/entry.html
+++ b/layouts/partials/entry.html
@@ -11,7 +11,7 @@
           datetime="{{ .Date.Format "2006-01-02T15:04:05.000-07:00" }}"
           itemprop="datePublished"
         >
-          {{ .Date.Format "Jan 2, 2006" }}
+          {{ humanize (dateFormat "Monday, 2 Jan" .PublishDate) }}
         </time>
       </a>
 
@@ -23,7 +23,7 @@
           datetime="{{ .Date.Format "2006-01-02T15:04:05.000-07:00" }}"
           itemprop="datePublished"
         >
-          {{ .Date.Format "Jan 2, 2006" }}
+          {{ humanize (dateFormat "Monday, 2 Jan" .PublishDate) }}
         </time>
       </a>
 
