--- a/assets-src/css/styles.css
+++ b/assets-src/css/styles.css
@@ -40,11 +40,11 @@
     @apply my-3;
   }
 
-  article h2 {
+  article.entry .entry-body h2 {
     @apply mt-5;
   }
 
-  article h2 + p {
+  article.entry .entry-body h2 + p {
     @apply mt-1;
   }
 
@@ -77,6 +77,10 @@
 
   .entry img {
     @apply shadow-md rounded w-full;
+  }
+
+  .entry-body img:first-child {
+    @apply mt-2;
   }
 }
 
