--- a/assets/css/dist.css
+++ b/assets/css/dist.css
@@ -497,11 +497,11 @@ article.entry p {
   margin-bottom: 0.75rem;
 }
 
-article h2 {
+article.entry .entry-body h2 {
   margin-top: 1.25rem;
 }
 
-article h2 + p {
+article.entry .entry-body h2 + p {
   margin-top: 0.25rem;
 }
 
@@ -570,6 +570,10 @@ h2 {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.entry-body img:first-child {
+  margin-top: 0.5rem;
 }
 
 *, ::before, ::after {
@@ -651,8 +655,8 @@ h2 {
   margin-bottom: 0.25rem;
 }
 
-.mt-16 {
-  margin-top: 4rem;
+.mt-24 {
+  margin-top: 6rem;
 }
 
 .mb-2 {
@@ -850,6 +854,10 @@ h2 {
   padding-right: 1rem;
 }
 
+.pt-24 {
+  padding-top: 6rem;
+}
+
 .pb-2 {
   padding-bottom: 0.5rem;
 }
@@ -923,6 +931,10 @@ h2 {
 }
 
 @media (min-width: 768px) {
+  .md\:mt-32 {
+    margin-top: 8rem;
+  }
+
   .md\:box-content {
     box-sizing: content-box;
   }
@@ -959,6 +971,10 @@ h2 {
   .md\:px-24 {
     padding-left: 6rem;
     padding-right: 6rem;
+  }
+
+  .md\:pt-32 {
+    padding-top: 8rem;
   }
 }
 
