--- a/assets/css/dist.css
+++ b/assets/css/dist.css
@@ -512,7 +512,8 @@ article blockquote {
   line-height: 1.25rem;
 }
 
-article.entry .entry-body a::after {
+main > header a::after,
+  article.entry .entry-body a::after {
   content: "°";
   position: relative;
   display: inline;
@@ -521,13 +522,14 @@ article.entry .entry-body a::after {
 }
 
 @media (prefers-color-scheme: dark) {
-  article.entry .entry-body a::after {
+  main > header a::after, article.entry .entry-body a::after {
     --tw-text-opacity: 1;
     color: rgb(239 68 68 / var(--tw-text-opacity));
   }
 }
 
-article.entry .entry-body a::after {
+main > header a::after,
+  article.entry .entry-body a::after {
   top: -2px;
   margin-left: 1.5px;
 }
