--- a/assets/css/dist.css
+++ b/assets/css/dist.css
@@ -917,6 +917,18 @@ h2 {
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
+@media (prefers-color-scheme: dark) {
+  .dark\:border-slate-600 {
+    --tw-border-opacity: 1;
+    border-color: rgb(71 85 105 / var(--tw-border-opacity));
+  }
+
+  .dark\:border-slate-700 {
+    --tw-border-opacity: 1;
+    border-color: rgb(51 65 85 / var(--tw-border-opacity));
+  }
+}
+
 @media (min-width: 640px) {
   .sm\:block {
     display: block;
