Add additional spacing

--- a/layouts/_default/list.archivehtml.html
+++ b/layouts/_default/list.archivehtml.html
@@ -2,11 +2,11 @@
   <div class="space-y-32">
     {{ range .Site.RegularPages.GroupByPublishDate "2006" }}
       {{ if ne .Key "0001" }}
-        <div>
+        <div class="space-y-2">
           <h2 class="font-bold">{{ .Key }}</h2>
           <div class="space-y-16">
             {{ range .Pages.GroupByDate "January" }}
-              <div>
+              <div class="space-y-2">
                 <h3 class="font-bold">{{ .Key }}</h3>
 
                 <ul class="space-y-4">
