--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <ul id="post-list">
+  <ul class="space-y-32">
     {{ if or .IsHome .Site.Params.paginate_categories }}
       {{ $paginator := .Paginate (where .Pages.ByDate.Reverse "Type" "post") }}
       {{ $list := $paginator.Pages }}
