Add missing <head> content

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,23 +1,74 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <title>
-    {{ block "title" . }}{{- .Title }} - {{ .Site.Title -}}{{ end }}
+    {{ block "title" . }}
+      {{ if .IsHome }}
+        {{ .Site.Title }}
+      {{ else }}
+        {{ .Site.Title }} -
+        {{ .Title }}
+      {{ end }}
+    {{ end }}
   </title>
-  {{- if .Description }}
-    <meta name="description" content="{{ .Description }}" />
-  {{ end -}}
-  {{- if .Keywords }}
-    <meta
-      name="keywords"
-      content="{{ delimit
-        .Keywords ","
-      }}"
+
+  <meta name="description" content="{{ .Summary }}" />
+  <link
+    rel="shortcut icon"
+    href="https://micro.blog/{{ .Site.Author.username }}/favicon.png"
+    type="image/x-icon"
+  />
+  <link rel="canonical" href="{{ .Permalink }}" />
+
+  {{ if .RSSLink -}}
+    <link
+      href="{{ .RSSLink }}"
+      rel="alternate"
+      type="application/rss+xml"
+      title="{{ .Site.Title }}"
+    />
+    <link
+      href="{{ "podcast.xml" | absURL }}"
+      rel="alternate"
+      type="application/rss+xml"
+      title="Podcast"
+    />
+    <link
+      rel="alternate"
+      type="application/json"
+      title="{{ .Site.Title }}"
+      href="{{ "feed.json" | absURL }}"
+    />
+    <link
+      rel="EditURI"
+      type="application/rsd+xml"
+      href="{{ "rsd.xml" | absURL }}"
     />
   {{ end -}}
+
   {{- if .Params.Author }}
     <meta name="author" content="{{ .Params.Author }}" />
   {{ end -}}
+
+
+  <link rel="me" href="https://micro.blog/{{ .Site.Author.username }}" />
+  {{ with .Site.Params.twitter_username }}
+    <link rel="me" href="https://twitter.com/{{ . }}" />
+  {{ end }}
+  {{ with .Site.Params.github_username }}
+    <link rel="me" href="https://github.com/{{ . }}" />
+  {{ end }}
+  {{ with .Site.Params.instagram_username }}
+    <link rel="me" href="https://instagram.com/{{ . }}" />
+  {{ end }}
+  <link rel="authorization_endpoint" href="https://micro.blog/indieauth/auth" />
+  <link rel="token_endpoint" href="https://micro.blog/indieauth/token" />
+  <link rel="micropub" href="https://micro.blog/micropub" />
+  <link rel="microsub" href="https://micro.blog/microsub" />
+  <link rel="webmention" href="https://micro.blog/webmention" />
+  <link rel="subscribe" href="https://micro.blog/users/follow" />
+
   {{ hugo.Generator }}
   {{- $styles := resources.Get "css/dist.css" -}}
   {{- if
