--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,13 +2,25 @@
   <article class="mb-24 h-entry entry">
     <header>
       <!-- Title and Publication Date -->
-      <h1 class="text-xl font-bold p-name">{{ .Title }}</h1>
-      <time
-        class="dt-published"
-        datetime="{{ .PublishDate.Format "2006-01-02 15:04:05 -0700" }}"
-      >
-        {{ humanize (dateFormat "Monday, 2 Jan" .PublishDate) }}
-      </time>
+      {{ if .Title }}
+        <h1 class="text-xl font-bold p-name">{{ .Title }}</h1>
+        <time
+          class="dt-published"
+          datetime="{{ .PublishDate.Format "2006-01-02 15:04:05 -0700" }}"
+        >
+          {{ humanize (dateFormat "Monday, 2 Jan" .PublishDate) }}
+        </time>
+      {{ else }}
+        <h1 class="font-bold p-name">
+          <time
+            class="dt-published"
+            datetime="{{ .PublishDate.Format "2006-01-02 15:04:05 -0700" }}"
+          >
+            {{ humanize (dateFormat "Monday, 2 Jan" .PublishDate) }}
+          </time>
+        </h1>
+      {{ end }}
+
 
       <!-- 
             H-card that is used for IndieWeb 
