--- a/assets/css/dist.css
+++ b/assets/css/dist.css
@@ -726,6 +726,10 @@ h2 {
   max-width: 36rem;
 }
 
+.max-w-\[20px\] {
+  max-width: 20px;
+}
+
 .grow {
   flex-grow: 1;
 }
@@ -765,6 +769,11 @@ h2 {
 .gap-x-4 {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
+}
+
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
 }
 
 .space-y-32 > :not([hidden]) ~ :not([hidden]) {
