--- a/layouts/section/replies.html
+++ b/layouts/section/replies.html
@@ -4,12 +4,12 @@
       {{ $paginator := .Paginate (where .Pages.ByDate.Reverse "Type" "reply") }}
       {{ $list := $paginator.Pages }}
       {{ range $list }}
-        {{ partial "entry.html" . }}
+        {{ partial "reply.html" . }}
       {{ end }}
     {{ else }}
       {{ $list := where .Pages.ByDate.Reverse "Type" "reply" }}
       {{ range $list }}
-        {{ partial "entry.html" . }}
+        {{ partial "reply.html" . }}
       {{ end }}
     {{ end }}
   </ul>
