--- a/assets/css/dist.css
+++ b/assets/css/dist.css
@@ -523,39 +523,27 @@ article blockquote {
   }
 }
 
-main > header a::after,
+/* main > header a::after,
   article.entry .entry-body a::after {
-  content: "°";
-  position: relative;
-  display: inline;
-  --tw-text-opacity: 1;
-  color: rgb(153 27 27 / var(--tw-text-opacity));
-}
+    content: "°";
+    @apply inline text-red-800 dark:text-red-500 relative;
+    top: -2px;
+    margin-left: 1.5px;
+  } */
 
-@media (prefers-color-scheme: dark) {
-  main > header a::after, article.entry .entry-body a::after {
-    --tw-text-opacity: 1;
-    color: rgb(239 68 68 / var(--tw-text-opacity));
-  }
-}
-
-main > header a::after,
-  article.entry .entry-body a::after {
-  top: -2px;
-  margin-left: 1.5px;
-}
-
-a {
+article.entry .entry-body a {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
   -webkit-text-decoration-color: #991b1b;
           text-decoration-color: #991b1b;
   -webkit-text-decoration-style: wavy;
           text-decoration-style: wavy;
   text-decoration-thickness: 1px;
-  text-underline-offset: 2px;
+  text-underline-offset: 5px;
 }
 
 @media (prefers-color-scheme: dark) {
-  a {
+  article.entry .entry-body a {
     -webkit-text-decoration-color: #ef4444;
             text-decoration-color: #ef4444;
   }
