--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,13 @@
   <body>
     {{- partial "dev-size-indicator.html" . -}}
     {{- partial "header.html" . -}}
-    <main class="w-full max-w-xl p-6 md:px-24 md:box-content">
+
+
+    <main
+      class="w-full {{ if ne .RelPermalink "/photos/" }}
+        max-w-xl md:box-content
+      {{ end }} p-6 md:px-24 "
+    >
       {{- block "main" . }}{{- end }}
     </main>
     {{- partial "dev-parameters.html" . -}}
