--- a/assets/css/dist.css
+++ b/assets/css/dist.css
@@ -581,7 +581,7 @@ h2 {
   font-weight: 700;
 }
 
-.entry img {
+.photos-grid__item img, .entry img {
   width: 100%;
   border-radius: 0.25rem;
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
